fix scrollbar width

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-    min-width: 100%;
+    width: min(0.5rem, 0.5vw);
 }
 ::-webkit-scrollbar-track {
     background-color: hsl(210, 10%, 33%);
